--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@openzeppelin/contracts": "^4.3.2",
+    "@truffle/hdwallet-provider": "^1.5.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "ethers": "^5.4.7",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
     "morgan": "^1.10.0",
-    "socket.io": "^4.2.0"
+    "socket.io": "^4.2.0",
+    "web3": "^1.5.3"
   },
   "devDependencies": {
     "eslint": "^7.28.0",
